Fixed page bckgrnd bug that caused style to get cut off by page height

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
     #GENERAL-STYLES
 \*------------------------------------*/
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   background: #333;
   box-shadow: inset 0 0 100px rgba(0,0,0,.5);
